# talicska-robot

./: .claudeignore  .env  .gitignore  Dockerfile  Dockerfile.foxglove  Makefile  cyclonedds.xml  docker-compose.tools.yml  docker-compose.yml  robot.repos
config/: robot_params.yaml
config/netplan/: 01-robot.yaml
configs/: iceoryx_config.toml
docs/: backlog.md  ecosystem_architecture.md  implementation_plan.md  network_setup.md  phase_isaac_humble_heterogeneous.md  phase_isaac_vio.md  phase_replay_v2.md  phase_trajectory_replay.md  policy.md  progress.md  project_overview.md  robot_architecture.md  state_snapshot_2026_05_17.md  system_backup_plan.md  systemstatus.md  systemtest.md
docs/backup/: bno085-i2c7-100khz.dts  bno085-i2c7-50khz.dts  g1_results.md  g2_results.md  g3_results.md  g4_results.md  g5_results.md  g6bc_results.md  installed-packages.txt  restore-manual-steps.md  system-info.txt
docs/backup/claude/plans/: current-operational-maintenance.md  indexed-spinning-stardust.md  lexical-bouncing-pearl.md  mutable-giggling-gizmo.md  piped-watching-dream.md  rippling-spinning-willow.md  shiny-churning-puzzle.md  toasty-drifting-harbor.md  typed-discovering-orbit.md  zippy-inventing-umbrella.md
docs/backup/claude/tasks/64761734-d7df-4b67-be2d-273030d6442e/: 1.json
docs/backup/claude/tasks/77b540ea-0fb4-4f17-bbe1-d41aaa154c6c/: 1.json  2.json
docs/backup/claude/tasks/c15f317a-a5da-4fa1-b403-ee95378bf28d/: 1.json
docs/backup/patches/: 0001-fix-bno08x-watchdog-uncaught-exception.patch  0001-fix-rplidar-SIGTERM-handler-motor-stability-gate.patch
docs/backup/udev/: 99-realsense-libusb.rules  99-realsense-unbind.rules  99-rplidar.rules
drivers/rt2800usb/: Makefile  dkms.conf
robot_bringup/: CMakeLists.txt  package.xml
robot_bringup/config/: controllers.yaml  ekf.yaml  nav2_params.yaml  slam_params.yaml
robot_bringup/launch/: hardware.launch.py  navigation.launch.py  robot.launch.py  sensors.launch.py
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: description.launch.py
robot_description/meshes/: chassis.stl  platform.stl  wheel.stl
robot_description/urdf/: robot.urdf.xacro
robot_missions/: CMakeLists.txt  package.xml
robot_missions/config/: replay.yaml
robot_missions/launch/: replay.launch.py
robot_missions/src/: ok_go_supervisor.cpp  trajectory_node.cpp
robot_safety/: CMakeLists.txt  package.xml
robot_safety/launch/: safety.launch.py
robot_safety/src/: safety_supervisor.cpp  startup_supervisor.cpp
robot_teleop/: CMakeLists.txt  package.xml
robot_teleop/config/: twist_mux.yaml
robot_teleop/launch/: teleop.launch.py
robot_teleop/src/: rc_teleop_node.cpp  winch_node.cpp
scripts/: bash_aliases  bootstrap.sh  camera_director.py  check_rc.sh  dropbox_sync.conf  dropbox_sync.sh  install.sh  mesh_server.py  prestart.sh  restart_watchdog.sh  ros2_health_check.sh  ros_entrypoint.sh  ros_readiness_check.py  scan_self_filter_calibrate.py  setup_network.sh  shutdown.sh  stack_test.sh  startup.sh  status_monitor.sh  talicska-power-button.sh  test_jetson_config.sh  tmux.conf  tmux_session.sh
scripts/systemd/: dropbox-sync.service  talicska-power-button.service  talicska-power.service  talicska-restart-watchdog.service  talicska-robot.service  talicska-tmux.service
